SVDErrorSimulator class is finished. Hopefully this will allow me to remove a significant amount of bloat from the svd notebook.

--- a/svd.ipynb
+++ b/svd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Step 1 - Generate two random 100x100 matrices\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# I'm guessing the book wants me to solve for X using Inversion and SVD/rSVD mixed LU Decomposition. The text doesn't specify\n",
@@ -1020,19 +1020,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.974747816449546"
+      "text/plain": "0.8975011526418636"
      },
-     "execution_count": 296,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(b - (A1 @ xtilde_svd_1), ord=2) / np.linalg.norm(b, ord=2)"
+    "(np.linalg.norm(b - (A1 @ xtilde_svd_1), ord=2))**2 / np.linalg.norm(b, ord=2)**2"
    ],
    "metadata": {
     "collapsed": false,
@@ -1043,19 +1043,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.9716126087773735"
+      "text/plain": "0.9188796169686643"
      },
-     "execution_count": 297,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(b - (A2 @ xtilde_svd_2), ord=2) / np.linalg.norm(b, ord=2)"
+    "(np.linalg.norm(b - (A2 @ xtilde_svd_2), ord=2))**2 / np.linalg.norm(b, ord=2)**2"
    ],
    "metadata": {
     "collapsed": false,
@@ -1078,19 +1078,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.9719509126240541"
+      "text/plain": "0.8898291390982102"
      },
-     "execution_count": 298,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(b - (A1 @ xtilde_rsvd_1), ord=2) / np.linalg.norm(b, ord=2)"
+    "(np.linalg.norm(b - (A1 @ xtilde_rsvd_1), ord=2))**2 / np.linalg.norm(b, ord=2)**2"
    ],
    "metadata": {
     "collapsed": false,
@@ -1101,19 +1101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.971597219341565"
+      "text/plain": "0.9192775633423217"
      },
-     "execution_count": 299,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(b - (A2 @ xtilde_rsvd_2), ord=2) / np.linalg.norm(b, ord=2)"
+    "(np.linalg.norm(b - (A2 @ xtilde_rsvd_2), ord=2))**2 / np.linalg.norm(b, ord=2)**2"
    ],
    "metadata": {
     "collapsed": false,
