--- a/svd.ipynb
+++ b/svd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1026,6 +1026,42 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1.01243 , 1.01092 , 1.0096  , ..., 1.01776 , 1.01606 , 1.01434 ],\n       [1.01186 , 1.01034 , 1.00902 , ..., 1.01725 , 1.01553 , 1.01379 ],\n       [1.01119 , 1.00965 , 1.00833 , ..., 1.01663 , 1.01489 , 1.01313 ],\n       ...,\n       [0.893477, 0.872418, 0.856538, ..., 0.989162, 0.953848, 0.923323],\n       [0.896224, 0.875572, 0.860087, ..., 0.99166 , 0.956212, 0.925753],\n       [0.898832, 0.878495, 0.863317, ..., 0.994312, 0.958626, 0.928144]])"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat = loadmat(os.path.join(\"data\", \"CYLINDER_ALL.mat\"))\n",
+    "dat[\"UALL\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
