--- a/FourierWavelet.ipynb
+++ b/FourierWavelet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,7 +14,9 @@
     "import os\n",
     "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pywt\n",
+    "import scipy as sp"
    ]
   },
   {
